docs(guides): dont use code highlighting for names

--- a/packages/tools/docusaurus/docs/guides/create/start.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/start.mdx
@@ -259,7 +259,7 @@ node_modules
 ## Next Step
 
 We'll continue by applying our branding to **kickstartDS**, which will result in a bunch of token files (`JSON`) being added to the project.<br/>
-This will also give us the opportunity to set up `Storybook`, and get a first visual representation of our Design System in the browser!
+This will also give us the opportunity to set up **Storybook**, and get a first visual representation of our Design System in the browser!
 
 TODO add Commit reminder
 
