--- a/packages/tools/docusaurus/docs/guides/create/design.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/design.mdx
@@ -10,8 +10,8 @@ import Admonition from 'react-admonitions';
 
 Applying your branding and corporate design to **kickstartDS** is itself done in roughly two steps:
 
-1. Use a reduced set of `Branding Token` to generate your initial `Design Token` set
-2. Fine tune the resulting `Design Token` set to closely fit your corporate identity
+1. Use a reduced set of **Branding Token** to generate your initial **Design Token** set
+2. Fine tune the resulting **Design Token** set to closely fit your corporate identity
 
 ## Apply branding
 
@@ -19,14 +19,14 @@ Applying your branding and corporate design to **kickstartDS** is itself done in
 
 TODO rename this file (`token-primitives.json` -> `branding-token.json`), change `kickstartDS-cli` accordingly, location should also be configurable there
 
-We start by creating a file `branding-token.json`, inside a new directory `src/token`... for everything to do with `Design Token` going forward:
+We start by creating a file `branding-token.json`, inside a new directory `src/token`... for everything to do with **Design Token** going forward:
 
 ```bash
 mkdir -p src/token
 touch src/token/branding-token.json
 ```
 
-This file will hold all of our `Branding Token`. Those are used to initialize you first `Design Token` set, and especially ease first-time setup.<br/>
+This file will hold all of our **Branding Token**. Those are used to initialize you first **Design Token** set, and especially ease first-time setup.<br/>
 Get the most up-to-date version of its content [from here](https://github.com/kickstartDS/kickstartDS/blob/feature/style-dictionary-container-queries/packages/tools/style-dictionary/defaultPrimitives.json), and paste it into the file you just created:
 
 <CH.Section>
@@ -124,7 +124,7 @@ Get the most up-to-date version of its content [from here](https://github.com/ki
 
 ### Select Branding Token
 
-For a more in-depth overview of this process, have a look at our [Generate Token Set guide](../theming/generate-token-set.md) or the [concepts page about `Branding Token`](../../concepts/token/branding-token.md), detailing all values in use.<br/>
+For a more in-depth overview of this process, have a look at our [Generate Token Set guide](../theming/generate-token-set.md) or the [concepts page about **Branding Token**](../../concepts/token/branding-token.md), detailing all values in use.<br/>
 
 But to get a first feel for working with the file, and to add some flavour to our Design System, we'll change some select values around. And feel free to replace everything with values that seem more appropriate for you, or that fit your particular brand (maybe even because you opted to follow the more detailed guide above). If you're wondering which values we selected for this guide... we're mostly matching our own brand for this guide:
 
@@ -705,9 +705,9 @@ We keep the general spacing of `8px`, though. We'll also leave the rest of the v
 
 </CH.Scrollycoding>
 
-Now that we have a slightly modified, up-to-date version of our `Branding Token` in place, we can start hooking everything up.
+Now that we have a slightly modified, up-to-date version of our **Branding Token** in place, we can start hooking everything up.
 
-## `kickstartDS` Integration
+## **kickstartDS** Integration
 
 First, add the `kickstartDS CLI` to your project:
 
@@ -770,19 +770,21 @@ Then add the following two additional lines to your `package.json` scripts block
 
 </CH.Code>
 
-`init-tokens` is used to convert your `Branding Token` (`branding-token.json`) into a `Style Dictionary` compatible `Design Token` set (a bunch of `JSON` files), whereas `build-tokens` takes your `Design Token` set, and converts it to the outputs needed to use and display your Design System. But more about this later!
+`init-tokens` is used to convert your **Branding Token** (`branding-token.json`) into a **Style Dictionary** compatible **Design Token** set (a bunch of `JSON` files), whereas `build-tokens` takes your **Design Token** set, and converts it to the outputs needed to use and display your Design System. But more about this later!
 
-The `--token-path` set here tells our CLI where to put and search for your `Design Token` set, we'll use `src/token/dictionary` in this guide (but you may change this to something else of course).
+The `--token-path` set here tells our CLI where to put and search for your **Design Token** set, we'll use `src/token/dictionary` in this guide (but you may change this to something else of course).
 
-### Generate first Design Token set
+### Generate first **Design Token** set
 
-Generate your first full set of `Design Token` now, by calling:
+Generate your first full set of **Design Token** now, by calling:
 
 ```bash
 yarn init-tokens
 ```
 
 Your output should look roughly like this:
+
+TODO: find correct format for raw output, `txt` is wrong!
 
 ```txt
 yarn run v1.22.18
@@ -823,7 +825,7 @@ Done in 1.19s.
 
 ```
 
-It uses your `branding-token.json` as an input, and generates a folder `src/token/dictionary` for you. That folder holds `JSON` files defining your `Design Token` by category:
+It uses your `branding-token.json` as an input, and generates a folder `src/token/dictionary` for you. That folder holds `JSON` files defining your **Design Token** by category:
 
 ```bash
 $ tree src/token/dictionary
@@ -845,15 +847,15 @@ $ tree src/token/dictionary
 > 0 directories, 12 files
 ```
 
-You'll only use this mechanism when first setting up your tokens. It's meant to specifically ease this workflow. Running it again will overwrite changes you manually did to your `Design Token` set, which is probably not intended!
+You'll only use this mechanism when first setting up your tokens. It's meant to specifically ease this workflow. Running it again will overwrite changes you manually did to your **Design Token** set, which is probably not intended!
 
 To learn more about the categories represented by those generated files, have a look at [our foundations page about them](../../foundations/token/design-token/index.md).
 
-### Compile Design Token
+### Compile **Design Token**
 
-Finally, to test the integration works as expected, we'll first want to create one additional file: `sd.config.js`. As the name may imply, this is further configuration for our Design Token, to convert them into different outputs (more specifically the Style Dictionary that gets used under the hood):
+Finally, to test the integration works as expected, we'll first want to create one additional file: `sd.config.js`. As the name may imply, this is further configuration for our **Design Token**, to convert them into different outputs (more specifically the Style Dictionary that gets used under the hood):
 
-As this is based on `Style Dictionary`, it generally follows [their configuration scheme](https://amzn.github.io/style-dictionary/#/config?id=using-configuration-files).
+As this is based on **Style Dictionary**, it generally follows [their configuration scheme](https://amzn.github.io/style-dictionary/#/config?id=using-configuration-files).
 
 Let's detail some lines:
 
@@ -947,9 +949,9 @@ module.exports = StyleDictionary.extend(config).extend({
 
 ---
 
-#### Design Token location
+#### **Design Token** location
 
-We configure the default Design Token location, which is `tokens` as a glob `src/token/dictionary/**/*.json`...
+We configure the default **Design Token** location, which is `tokens` as a glob `src/token/dictionary/**/*.json`...
 
 <CH.Code>
 
@@ -980,7 +982,7 @@ module.exports = StyleDictionary.extend(config).extend({
 
 #### Default SVG icons
 
-... and tell `Style Dictionary` where to look for our default icons. These are used by **kickstartDS** components, and need to be present in different formats later on (depending on the use case).
+... and tell **Style Dictionary** where to look for our default icons. These are used by **kickstartDS** components, and need to be present in different formats later on (depending on the use case).
 
 <CH.Code>
 
@@ -1011,7 +1013,7 @@ module.exports = StyleDictionary.extend(config).extend({
 
 #### Platforms
 
-To test that our integration works as expected, we'll add the `css` platform for now, which will result in our Design Token being converted to [CSS custom properties](https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties), as `src/token/tokens.css`.
+To test that our integration works as expected, we'll add the **CSS** platform for now, which will result in our **Design Token** being converted to [CSS custom properties](https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties), as `src/token/tokens.css`.
 
 <CH.Code>
 
@@ -1044,9 +1046,9 @@ module.exports = StyleDictionary.extend(config).extend({
   should add an actual explanation here!
 </Admonition>
 
-You can build your Design Token set into different outputs using `Style Dictionary` and **kickstartDS**. So far we've mainly configured how token are ingested, but we'll build on our single test platform `css` in the process of this guide. Adding integrations for Storybook, the use in **kickstartDS** components, and so on! By re-using our pre-made configurations we only have to define a `buildPath` to activate a platform. Optionally you can define file names with `files`, too (read more in our [concepts page about Style Dictionary](#) TODO add link).
+You can build your **Design Token** set into different outputs using **Style Dictionary** and **kickstartDS**. So far we've mainly configured how token are ingested, but we'll build on our single test platform **CSS** in the process of this guide. Adding integrations for Storybook, the use in **kickstartDS** components, and so on! By re-using our pre-made configurations we only have to define a `buildPath` to activate a platform. Optionally you can define file names with `files`, too (read more in our [concepts page about Style Dictionary](#) TODO add link).
 
-With all of that in place, for the first time compile your Design Token set into CSS Custom Properties now:
+With all of that in place, for the first time compile your **Design Token** set into CSS Custom Properties now:
 
 ```bash
 yarn build-tokens
@@ -1112,7 +1114,7 @@ src/token/tokens.css
 
 ### Fine tune the design
 
-Once the `Design Token` are generated, the Design System will already have the broad look & feel of your Corporate Design!<br/>
+Once the **Design Token** are generated, the Design System will already have the broad look & feel of your Corporate Design!<br/>
 However you probably still have to tweak it a little to make it match up perfecly with your CD requirements.<br/>
 This can be done by configuring the various `.json` files found within the `dictionary` folder.<br/>
 
@@ -3671,7 +3673,7 @@ Not included here are generated files, have a look at the Code Sandbox for the c
 
 ## Next Step
 
-In the next step we'll set up `Storybook`. This connects nicely, as we'll add the `Storybook` integration for Design Token there, to make them viewable in the browser. We'll also make preparations for the step after, where we'll add components.
+In the next step we'll set up **Storybook**. This connects nicely, as we'll add the **Storybook** integration for **Design Token** there, to make them viewable in the browser. We'll also make preparations for the step after, where we'll add components.
 
 TODO add Commit reminder
 
