docs(guides): add correct code format to shellscript output

--- a/packages/tools/docusaurus/docs/guides/create/design.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/design.mdx
@@ -784,9 +784,7 @@ yarn init-tokens
 
 Your output should look roughly like this:
 
-TODO: find correct format for raw output, `txt` is wrong!
-
-```txt
+```shellscript
 yarn run v1.22.18
 $ kickstartDS tokens init --token-path './src/token/dictionary' --cleanup --rc-only
   _    _      _        _             _   ____  ____
@@ -1056,7 +1054,7 @@ yarn build-tokens
 
 If everything worked as expected, you should end up with a long `src/token/tokens.css` file and the following output on your terminal:
 
-```
+```shellscript
 yarn run v1.22.18
 $ kickstartDS tokens init --token-path './src/token/dictionary' --cleanup --rc-only
   _    _      _        _             _   ____  ____
